fixtures/syntax-error/main.tex
\documentclass{article}
\begin{document}
Before the error.
\undefinedcommand
\end{document}
